Reestruturando css, adicionando imagens as techs.

--- a/Html/index.html
+++ b/Html/index.html
@@ -69,10 +69,10 @@
                 </div> <!-- flex end-->
             </div> <!--container end-->
         </section>
-        <section id="skills" class="skills container flex flex-center">
-            <div class="card flex-row">
+        <section id="skills" class="skills container flex">
+            <div class="">
                 <h2>Soft Skills</h2>
-                <article class="card flex-between">
+                <article class=" flex-evenly">
                     <ul>
                         <li>Adaptabilidade</li>
                         <li>Proatividade</li>
@@ -104,180 +104,205 @@
             </article>
             <article id="desktop" class="card flex-row ">
 
-                <ul class="flex flex-row flex-evenly">
+                <ul class="flex flex-row">
                     <li>
-                        <i class="fa-brands fa-java fa-3x"></i>
+                        <img src="../images/Techs/Java.svg" alt="logo java">
                         <span class="bar-fill-vert" style="--h: 60%"><span class="java-skill"></span></span>
                     </li>
                     <li>
                         <h3>C</h3>
+                        <img src="../images/Techs/C++ (CPlusPlus).svg" alt="">
                         <span class="skill-bar bar-vert"><span class="c-skill"></span></span>
                     </li>
                     <li>
                         <h3>C++</h3>
+                        <img src="../images/Techs/C++ (CPlusPlus).svg" alt="">
                         <span class="skill-bar bar-vert"><span class="cpp-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-between">
                         <h3>Python</h3>
+                        <img src="../images/Techs/Python.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="py-skill"></span></span>
                     </li>
                     <li>
                         <h3>C#</h3>
+                        <img src="../images/Techs/C# (CSharp).svg" alt="">
                         <span class="skill-bar bar-vert"><span class="csharp-skill"></span></span>
                     </li>
                 </ul>
             </article>
             <article id="web" class="card flex ">
                 <ul>
-                    <li class="fel-col-rev flex-center">
-                        <h3>HTML5</h3>
+                    <li class="fel-col-rev flex-between">
+                        <img src="../images/Techs/HTML5.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="html-skill"></span></span>
                     </li>
                     <li>
-                        <h3>CSS3</h3>
+                        <img src="../images/Techs/CSS3.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="css-skill"></span></span>
                     </li>
                     <li>
-                        <h3>JavaScript</h3>
+                        <img src="../images/Techs/JavaScript.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="js-skill"></span></span>
                     </li>
                     <li>
-                        <h3>TypeScript</h3>
+                        <img src="../images/Techs/TypeScript.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="tsx-skill"></span></span>
                     </li>
                 </ul>
             </article>
-
-            <!-- MOBILE -->
             <article id="mobile" class="box">
                 <ul>
                     <li class="flex fel-col flex-center">
                         <h3>Java</h3>
+                        <img src="../images/Techs/Java.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="java-mobile-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
                         <h3>Kotlin</h3>
+                        <img src="../images/Techs/Kotlin.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="kotlin-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
                         <h3>Dart</h3>
+                        <img src="../images/Techs/Dart.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="dart-skill"></span></span>
                     </li>
                 </ul>
             </article>
-
-            <!-- DATABASE -->
             <article id="database" class="box">
                 <ul>
                     <li class="flex fel-col flex-center">
                         <h3>PostgreSQL</h3>
+                        <img src="../images/Techs/PostgresSQL.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="postgre-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
                         <h3>MongoDB</h3>
+                        <img src="../images/Techs/MongoDB.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="mongo-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
                         <h3>MySQL</h3>
+                        <img src="../images/Techs/MySQL.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="mysql-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
                         <h3>SQLite</h3>
+                        <img src="../images/Techs/SQLite.svg" alt="">
                         <span class="skill-bar bar-vert"><span class="sqlite-skill"></span></span>
                     </li>
                 </ul>
             </article>
-
-            <!-- DEVOPS -->
             <article id="dev-ops-tools" class="box">
                 <ul>
                     <li class="flex fel-col flex-center">
-                        <h3>GitHub</h3><span class="skill-bar bar-vert"><span class="gitHub-skill"></span></span>
-                    </li class="flex fel-col flex-center">
-                    <li class="flex fel-col flex-center">
-                        <h3>GitLab</h3><span class="skill-bar bar-vert"><span class="gitLab-skill"></span></span>
-                    </li class="flex fel-col flex-center">
-                    <li class="flex fel-col flex-center">
-                        <h3>Git</h3><span class="skill-bar bar-vert"><span class="git-skill"></span></span>
+                        <h3>Git</h3>
+                        <img src="../images/Techs/Git.svg" alt="">
+                        <span class="skill-bar bar-vert"><span class="git-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>Git Actions</h3><span class="skill-bar bar-vert"><span
-                                class="gitActions-skill"></span></span>
+                        <h3>GitHub</h3>
+                        <img src="../images/Techs/GitHub.svg" alt="">
+                        <span class="skill-bar bar-vert"><span class="gitHub-skill"></span></span>
+                    </li>
+                    <li class="flex fel-col flex-center">
+                        <h3>Git Actions</h3>
+                        <img src="../images/Techs/GitHub Actions.svg" alt="">
+                        <span class="skill-bar bar-vert"><span class="gitActions-skill"></span></span>
+                    </li>
+                    <li>
+                        <h3>GitLab</h3>
+                        <img src="../images/Techs/GitLab.svg" alt="">
+                        <span class="skill-bar bar-vert"><span class="gitLab-skill"></span></span>
                     </li>
                 </ul>
             </article>
-
-            <!-- CLOUD -->
             <article id="cloud" class="box">
                 <ul>
                     <li class="flex fel-col flex-center">
-                        <h3>AWS Services</h3><span class="skill-bar bar-fill bar-vert"><span
-                                class="services-skill"></span></span>
+                        <h3>AWS Services</h3>
+                        <img src="../images/Techs/AWS.svg" alt="">
+                        <span class="skill-bar bar-fill bar-vert"><span class="services-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>Firebase</h3><span class="skill-bar bar-fill bar-vert"><span
-                                class="friebase-skill"></span></span>
+                        <h3>Firebase</h3>
+                        <img src="../images/Techs/Firebase.svg" alt="">
+                        <span class="skill-bar bar-fill bar-vert"><span class="friebase-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>Azure</h3><span class="skill-bar bar-fill bar-vert"><span class="azure-skill"></span></span>
+                        <h3>Azure</h3>
+                        <img src="../images/Techs/Azure.svg" alt="">
+                        <span class="skill-bar bar-fill bar-vert"><span class="azure-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>Google Cloud</h3><span class="skill-bar bar-fill bar-vert"><span
-                                class="google-skill"></span></span>
+                        <h3>Google Cloud</h3>
+                        <img src="../images/Techs/Google Cloud.svg" alt="">
+                        <span class="skill-bar bar-fill bar-vert"><span class="google-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>Docker</h3><span class="skill-bar bar-fill bar-vert"><span
-                                class="docker-skill"></span></span>
+                        <h3>Docker</h3>
+                        <img src="../images/Techs/Docker.svg" alt="">
+                        <span class="skill-bar bar-fill bar-vert"><span class="docker-skill"></span></span>
                     </li>
                 </ul>
             </article>
-
-            <!-- FRAMEWORKS -->
             <article id="frameworks" class="box">
                 <ul>
                     <li class="flex fel-col flex-center">
-                        <h3>React</h3><span class="skill-bar bar-fill bar-vert"><span class="react-skill"></span></span>
+                        <h3>React</h3>
+                        <img src="../images/Techs/React.svg" alt="">
+                        <span class="skill-bar bar-fill bar-vert"><span class="react-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>Vue.js</h3><span class="skill-bar bar-fill bar-vert"><span class="vue-skill"></span></span>
+                        <h3>Vue.js</h3>
+                        <img src="../images/Techs/Vue.js.svg" alt="">
+                        <span class="skill-bar bar-fill bar-vert"><span class="vue-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>Flutter</h3><span class="skill-bar bar-fill bar-vert"><span
-                                class="flutter-skill"></span></span>
+                        <h3>Flutter</h3>
+                        <img src="../images/Techs/Flutter.svg" alt="">
+                        <span class="skill-bar bar-fill bar-vert"><span class="flutter-skill"></span></span>
                     </li>
                 </ul>
             </article>
-
-            <!-- PROCESS -->
             <article id="process" class="box">
                 <ul>
                     <li class="flex fel-col flex-center">
-                        <h3>Scrum</h3><span class="skill-bar bar-fill bar-vert"><span class="scrum-skill"></span></span>
+                        <h3>Scrum</h3>
+                        <img src="../images/Techs/Srum.svg" alt="svg scrum">
+                        <span class="skill-bar bar-fill bar-vert"><span class="scrum-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>Kanban</h3><span class="skill-bar bar-fill bar-vert"><span
-                                class="kanban-skill"></span></span>
+                        <h3>Kanban</h3>
+                        <img src="../images/Techs/Kanban.svg" alt="svg kanban">
+                        <span class="skill-bar bar-fill bar-vert"><span class="kanban-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>UML</h3><span class="skill-bar bar-fill bar-vert"><span class="uml-skill"></span></span>
+                        <h3>UML</h3>
+                        <img src="../images/Techs/Unified Modelling Language (UML).svg" alt="svg uml">
+                        <span class="skill-bar bar-fill bar-vert"><span class="uml-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>XP</h3><span class="skill-bar bar-fill bar-vert"><span class="xp-skill"></span></span>
+                        <h3>XP</h3>
+                        <img src="../images/Techs/Xp.svg" alt="svg xp">
+                        <span class="skill-bar bar-fill bar-vert"><span class="xp-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>Análise de Requisitos</h3><span class="skill-bar bar-fill bar-vert"><span
-                                class="req-skill"></span></span>
+                        <h3>Análise de Requisitos</h3>
+                        <img src="../images/Techs/Requiriments.svg" alt="svg Requiriments">
+                        <span class="skill-bar bar-fill bar-vert"><span class="req-skill"></span></span>
                     </li>
                     <li class="flex fel-col flex-center">
-                        <h3>Análise de Dados</h3><span class="skill-bar bar-fill bar-vert"><span
-                                class="data-analise-skill"></span></span>
+                        <h3>Análise de Dados</h3>
+                        <img src="../images/Techs/DataAnalisys.svg" alt="svg DataAnalisys">
+                        <span class="skill-bar bar-fill bar-vert"><span class="data-analise-skill"></span></span>
                     </li>
                 </ul>
             </article>
-
-            <!-- INTEREST -->
             <article id="interest" class="box">
                 <h2>Em breve...</h2>
+                <img src="../images/Techs/CommingSoon.svg" alt="svg emBreve">
             </article>
 
         </section>
